feat: update the award section

--- a/index.html
+++ b/index.html
@@ -437,6 +437,22 @@
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
+							
+							<div class="text pl-3">
+								<span class="date">2025</span>
+								<h2>CINEC IRS 2025 - <span style="color: #007bff;">Best Poster Presentation Award</span></h2>
+								<span class="position">CINEC Campus</span>
+								<p>
+									Research paper <strong>Algorithms for Accurate Body Measurement Extraction from 2D Images</strong>, was presented 
+									at CIRS 2025 and selected for the Best Poster Presentation Award.
+								</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							
 							<div class="text pl-3">
 								<span class="date">2024</span>
 								<h2>National ICT Awards (NBQSA) - <span style="color: #007bff;">Finalist Team
@@ -573,8 +589,8 @@
 		<div class="container-fluid px-md-0">
 			<div class="row no-gutters justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Projects</h1>
-					<h2 class="mb-4">Projects</h2>
+					<h1 class="big big-2">Featured Projects</h1>
+					<h2 class="mb-4">Featured Projects</h2>
 				</div>
 			</div>
 			<div class="row no-gutters">
