feat: Update the blog section, contact info & project section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
+	<!-- Add this in <head> if not already present -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+		integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 
@@ -672,6 +677,83 @@
 				</div>
 			</div>
 			<div class="row no-gutters">
+
+				<div class="col-md-4" style="margin-bottom: 5px; padding: 5px;">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/work-6.jpg);">
+
+						<!-- Year stack -->
+						<div class="icon-stack">
+							<div class="year-badge">
+								<i class="fas fa-calendar-alt"></i> 2025
+							</div>
+
+							<!-- GitHub Icon -->
+							<a href="https://github.com/basuru07/movie-explorer-app" target="_blank"
+								class="github-icon">
+								<i class="fab fa-github"></i>
+							</a>
+						</div>
+
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3>
+								<a href="https://github.com/basuru07/movie-explorer-app">
+									Movie Explorer App
+								</a>
+							</h3>
+							<span>Web Application</span>
+							<div class="mt-2">
+								<span class="badge bg-danger">React</span>
+								<span class="badge bg-primary">Material UI</span>
+								<span class="badge bg-info">Axios</span>
+								<span class="badge bg-warning text-dark">TMDb API</span>
+								<span class="badge bg-dark">Local Storage</span>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4" style="margin-bottom: 5px; padding: 5px;">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(images/work-7.jpg);">
+
+						<!-- Year stack -->
+						<div class="icon-stack">
+							<div class="year-badge">
+								<i class="fas fa-calendar-alt"></i> 2025
+							</div>
+
+							<!-- GitHub Icon -->
+							<a href="https://github.com/basuru07/Deploying-a-Microservices-Application-on-Kubernetes-with-Minikube"
+								target="_blank" class="github-icon">
+								<i class="fab fa-github"></i>
+							</a>
+						</div>
+
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3>
+								<a
+									href="https://github.com/basuru07/Deploying-a-Microservices-Application-on-Kubernetes-with-Minikube">
+									Deploying Microservices Application on Kubernetes with Minikube
+								</a>
+							</h3>
+							<span>DevOps</span>
+							<div class="mt-2">
+								<span class="badge bg-danger">Node.js</span>
+								<span class="badge bg-primary">HTML</span>
+								<span class="badge bg-info">CSS</span>
+								<span class="badge bg-warning text-dark">JS</span>
+								<span class="badge bg-dark">GitHub Action</span>
+								<span class="badge bg-warning">Minikube</span>
+								<span class="badge bg-primary">Kurbernetes</span>
+								<span class="badge bg-secondary">Docker</span>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="col-md-4" style="margin-bottom: 5px; padding: 5px;">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/work-1.jpg);">
@@ -968,54 +1050,68 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+						<a href="https://medium.com/@FlutBack/apache-kafka-159d39934a7b" class="block-20"
+							style="background-image: url('images/image_1.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+							<h3 class="heading">Apache Kafka</a>
 							</h3>
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+									<span class="mr-2">Nov. 30, 2025</span>
+									<a href="https://medium.com/@FlutBack/apache-kafka-159d39934a7b"
+										class="mr-2">Medium</a>
+									<a href="https://medium.com/@FlutBack/apache-kafka-159d39934a7b"
+										class="meta-chat"><span class="icon-chat"></span> Article</a>
 								</p>
 							</div>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>Apache Kafka is an open-source distributed event streaming platform built to process very
+								large volumes
+								of data in real time. It w...</p>
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+						<a href="https://medium.com/@FlutBack/wso2-api-manager-powering-the-future-of-api-driven-digital-transformation-eacdb415d870"
+							class="block-20" style="background-image: url('images/image_2.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+							<h3 class="heading">WSO2 API Manager: Powering the Future of API-Driven Digital
+								Transformation</a>
 							</h3>
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+									<span class="mr-2">Nov. 11, 2025</span>
+									<a href="https://medium.com/@FlutBack/wso2-api-manager-powering-the-future-of-api-driven-digital-transformation-eacdb415d870"
+										class="mr-2">Medium</a>
+									<a href="https://medium.com/@FlutBack/wso2-api-manager-powering-the-future-of-api-driven-digital-transformation-eacdb415d870"
+										class="meta-chat"><span class="icon-chat"></span> Article</a>
 								</p>
 							</div>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>Every modern business runs on APIs from mobile apps connecting to cloud services, to
+								enterprises integrating hundreds of backend
+								systems. But as the number of APIs grows, so doe...</p>
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+						<a href="https://medium.com/@FlutBack/complete-git-and-github-command-list-with-simple-explanations-13b4e94f041d"
+							class="block-20" style="background-image: url('images/image_3.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+							<h3 class="heading">Complete Git and GitHub command list with simple explanations</a>
 							</h3>
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+									<span class="mr-2">Mar. 13, 2025</span>
+									<a href="https://medium.com/@FlutBack/complete-git-and-github-command-list-with-simple-explanations-13b4e94f041d"
+										class="mr-2">Medium</a>
+									<a href="https://medium.com/@FlutBack/complete-git-and-github-command-list-with-simple-explanations-13b4e94f041d"
+										class="meta-chat"><span class="icon-chat"></span> Article</a>
 								</p>
 							</div>
 							<p>A small river named Duden flows by their place and supplies it with the necessary
@@ -1028,7 +1124,9 @@
 	</section>
 
 
-	<section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
+
+	<!-- Hireing Section -->
+	<!-- <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row justify-content-center">
@@ -1039,7 +1137,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 
@@ -1090,7 +1188,7 @@
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-medium"></span>
+							<span class="fa-brands fa-medium"></span>
 						</div>
 						<div>
 							<h3 class="mb-4">Medium</h3>
@@ -1099,22 +1197,26 @@
 					</div>
 				</div>
 			</div>
-
-
-
 		</div>
 	</section>
 
 
+
+	<!-- Footer Section -->
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">About</h2>
-						<p>Passionate Computer Science student skilled in Flutter, Linux, cloud computing, and
-							blockchain,
-							with strong teamwork, problem-solving, and adaptability.</p>
+						<p>
+							Motivated Full Stack Engineering Intern with hands-on experience in Web & Mobile
+							development, Linux
+							systems, cloud computing, and blockchain technologies. Known for strong problem-solving
+							skills, adaptability,
+							and effective teamwork, with a growing passion for building efficient and impactful tech
+							solutions.
+						</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="https://www.linkedin.com/in/basuru-yasaruwan-805820235/"
 									target="_blank"><span class="icon-linkedin"></span></a></li>
@@ -1124,8 +1226,12 @@
 									href="http://www.instagram.com/basuruu/profilecard/?igsh=MTB3dHlxbzRudDJmaw=="
 									target="_blank"><span class="icon-instagram"></span></a></li>
 							<li class="ftco-animate"><a href="https://medium.com/@FlutBack" target="_blank"><span
-										class="icon-medium"></span></a></li>
-
+										class="fa-brands fa-medium"></span></a></li>
+							<li class="ftco-animate">
+								<a href="https://www.threads.com/@basuruu" target="_blank">
+									<span class="fa-brands fa-threads"></span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -1143,6 +1249,13 @@
 											class="text">yasaruwanbasuruofficial@gmail.com</span></a></li>
 								<li><a href="https://www.linkedin.com/in/basuru-yasaruwan-805820235/"><span
 											class="icon icon-linkedin"></span><span class="text">Linkedin</span></a>
+								</li>
+								<li class="ftco-animate">
+									<a href="https://www.threads.net/@basuruu" target="_blank">
+										<span class="fa-brands fa-threads"></span>
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										<span class="text">Threads</span>
+									</a>
 								</li>
 							</ul>
 						</div>
