--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+	<!-- Custom Favicon -->
+    <link rel="icon" type="image/png" href="images/profile.png">
+
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 	<!-- Add this in <head> if not already present -->
