feat: Add Google verification file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
 	<title>Basuru Yasaruwan</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+	<meta name="title" content="Basuru Yasaruwan – Portfolio | Software Engineer">
+    <meta name="description" content="Basuru Yasaruwan - Software Engineer and Full Stack Developer specializing in .NET Core, Angular, and Oracle-based applications. Explore my projects, skills, and experience.">
+    <meta name="keywords" content="Basuru Yasaruwan, basuru portfolio, software engineer sri lanka, .NET developer, .NET Core, Angular developer, full stack developer, oracle developer">
+    <meta name="author" content="Basuru Yasaruwan">
+    <link rel="canonical" href="https://basuru07.github.io/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://basuru07.github.io/">
+    <meta property="og:title" content="Basuru Yasaruwan – Portfolio">
+    <meta property="og:description" content="Software Engineer and Full Stack Developer specializing in .NET Core and Oracle.">
+    <meta property="og:image" content="https://basuru07.github.io/images/your-cover-image.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Basuru Yasaruwan – Portfolio">
+    <meta name="twitter:description" content="Software Engineer | .NET Core | Angular | Oracle">
+    <meta name="twitter:image" content="https://basuru07.github.io/images/your-cover-image.png">
 
 	<!-- Custom Favicon -->
     <link rel="icon" type="image/png" href="images/profile.png">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 	<!-- Add this in <head> if not already present -->
